--- a/CookBook/CookBook.csproj
+++ b/CookBook/CookBook.csproj
@@ -224,6 +224,8 @@
     <Compile Include="Models\Ingredients.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Recipe.cs" />
+    <Compile Include="Models\ViewModels\DetailsIngredients.cs" />
+    <Compile Include="Models\ViewModels\DetailsRecipes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
